--- a/index.html
+++ b/index.html
@@ -24,11 +24,22 @@
             font-size: inherit;
             outline: none;
         }
+        #logo {
+            display: none;
+            width: 100%;
+            text-align: center;
+        }
+        #logo img {
+            width: 200px;
+            height: 200px;
+        }
     </style>
 </head>
 <body>
     <div id="terminal"></div>
+    <div id="logo">
+        <img src="image.png" alt="Site-86 Logo">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
-
