--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DCB Terminal</title>
+    <title>Site-86 Terminal</title>
     <style>
         body {
             background-color: black;
             color: green;
-            font-family: monospace;
-            padding: 20px;
+            font-family: 'Courier New', Courier, monospace;
         }
         #terminal {
-            display: block;
+            white-space: pre;
         }
         input {
             background-color: black;
             color: green;
             border: none;
+            font-family: 'Courier New', Courier, monospace;
+            font-size: inherit;
             outline: none;
-            font-family: monospace;
-            font-size: 16px;
         }
     </style>
 </head>
